--- a/SensorWorker/appsettings.json
+++ b/SensorWorker/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Logging": {
+    "Console": {
+      "DisableColors": true
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
