--- a/Monitoring/Monitoring.csproj
+++ b/Monitoring/Monitoring.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.20.0" />
   </ItemGroup>
 
 </Project>
