--- a/Frontend/Properties/launchSettings.json
+++ b/Frontend/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5002;https://localhost:5003",
       "dotnetRunMessages": true
     },
     "Docker": {
